--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "coolnodeapp",
+  "dependencies": {
+    "@supabase/supabase-js": "^1.35.3",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "multer": "^1.4.5-lts.1"
+  },
+  "name": "zad1012",
   "version": "1.0.0",
-  "description": "node app ",
   "main": "app.js",
   "scripts": {
-  "start": "node app.js"
-},
-  "repository": {
-  "type": "git",
-  "url": ""
-},
-  "author": "",
+    "start": "app.js"
+  },
+  "author": "Trushin",
   "license": "ISC",
-  "bugs": {
-  "url": ""
-},
-  "homepage": ""
+  "description": ""
 }
